# ebpf-syscall-tracer

./: .gitignore  Cargo.toml  README.md  tracerlog.txt
syscall-tracer/: Cargo.toml  build.rs
syscall-tracer-common/: Cargo.toml
syscall-tracer-common/src/: lib.rs
syscall-tracer-ebpf/: Cargo.toml
syscall-tracer-ebpf/src/: main.rs
syscall-tracer/src/: detection.rs  jsonlog.rs  main.rs  tui.rs
syscall-tracer/src/detection/: dropper.rs  mod.rs  persistence.rs  ptrace.rs  reverse_shell.rs  self_replace.rs
