[workspace]
resolver = "2"
members = [
    "syscall-tracer",
    "syscall-tracer-common",
    "syscall-tracer-ebpf",
]
default-members = ["syscall-tracer", "syscall-tracer-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = { version = "0.14.0", default-features = false }
aya-build = { version = "0.2.0", default-features = false }
aya-ebpf = { version = "0.2.1", default-features = false }
aya-log = { version = "0.3.0", default-features = false }
aya-log-ebpf = { version = "0.2.0", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
crossterm = { version = "0.29.0", default-features = false }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
ratatui = { version = "0.30.2", default-features = false }
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.150", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }

[profile.release.package.syscall-tracer-ebpf]
debug = 2
codegen-units = 1
strip = false
