[package]
name = "syscall-tracer"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
syscall-tracer-common = { path = "../syscall-tracer-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependency so that cache invalidation
# works properly.
syscall-tracer-ebpf = { path = "../syscall-tracer-ebpf" }

[[bin]]
name = "syscall-tracer"
path = "src/main.rs"
